import "Timestamp.proto";
import "DocumentId.proto";
import "Docflow/DocumentWithDocflow.proto";

package Diadoc.Api.Proto.Forwarding;

option java_outer_classname = "ForwardedDocumentProtos";

message ForwardedDocumentId
{
	optional string FromBoxId = 1;
	optional DocumentId DocumentId = 2;
	optional string ForwardEventId = 3;
}

message ForwardedDocument
{
	optional Timestamp ForwardTimestamp = 1;
	optional ForwardedDocumentId ForwardedDocumentId = 2;
	optional Docflow.DocumentWithDocflow DocumentWithDocflow = 3;
}
